--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -2,19 +2,34 @@
     display: flex;
     flex-direction: column;
     width: 500px;
+    margin-top: 20px;
 }
 
 .comment-form input {
     height: 30px;
+    border: 1px solid black;
     border-radius: 4px;
     margin-bottom: 5px;
+    box-sizing: border-box;
+    padding-left: 5px;
+    font: normal 12px 'Verdana';
+}
+
+input::placeholder,
+textarea::placeholder {
+    color: #575870;
+    font: normal 12px 'Verdana';
 }
 
 .comment-form textarea {
+    font: normal 12px 'Verdana';
+    padding: 5px;
     height: 80px;
     resize: none;
     border-radius: 4px;
     margin-bottom: 5px;
+    border: 1px solid black;
+    box-sizing: border-box;
 }
 
 .comment-form button {
@@ -22,6 +37,7 @@
 }
 
 .comment-form-error {
+    margin-bottom: 4px;
     font-size: 10px;
-    color: crimson;
+    color: red;
 }
